# twine-launcher

./: .gitignore  CONTRIBUTING.md  Context.md  DESIGN_DOCUMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  backend.spec  backend_server.py  build_desktop.py  docker-compose.yml  full_logs.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_add_autosave_enabled.py  0002_add_force_password_change.py
backend/app/: main.py  schemas.py
backend/app/api/: auth.py  backup.py  config.py  games.py  saves.py  sessions.py  themes.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  security.py  session_registry.py  utils.py
backend/app/services/: backup.py
backend/tests/: conftest.py  test_auth_users.py  test_backup.py  test_games_saves_sessions.py  test_themes.py
desktop/: .gitignore
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: installer.nsi
desktop/src-tauri/src/: main.rs
docs/: password-reset.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  utils.ts
frontend/src/api/: index.ts
frontend/src/hooks/: useDataFetch.ts  useToast.ts
frontend/src/pages/: ForceChangePassword.tsx  GamePage.tsx  Library.tsx  Login.tsx  Saves.tsx  Settings.tsx  Setup.tsx
frontend/src/store/: auth.ts  theme.ts
frontend/src/types/: index.ts
(+6 files in other folders)
